# libmchat

libmchat-master/: CMakeLists.txt
libmchat-master/include/: mchatv1.h
libmchat-master/src/: mchatv1.c  mchatv1_channel.c  mchatv1_config.h  mchatv1_fileio.c  mchatv1_formatter.c  mchatv1_formatter.h  mchatv1_macro_hell.h  mchatv1_parser.c  mchatv1_parser.h  mchatv1_peerlist.c  mchatv1_proto.c  mchatv1_proto.h  mchatv1_structs.h  mchatv1_threads.c  mchatv1_threads.h  mchatv1_utils.c  mchatv1_utils.h
libmchat-master/tests/: Makefile  format_test.c  peerlist_test.c  simple_receiver.c  simple_sender.c
libmchat-master/tests/parser_tests/: README.txt  parser_test_file_proper.base64  parser_test_mesg_proper.base64  parser_test_ping_proper.base64
